[gd_scene load_steps=6 format=2]

[ext_resource path="res://Medicine.gd" type="Script" id=1]
[ext_resource path="res://TrackHelperTheme.tres" type="Theme" id=2]
[ext_resource path="res://Rubik-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 39
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="Medicine" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 300, 0 )
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.670588, 0.729412, 0.898039, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 720.0
margin_bottom = 200.0
grow_horizontal = 2

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
self_modulate = Color( 0.286275, 0.317647, 0.647059, 1 )
margin_right = 477.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Acetaminophen"

[node name="Button2" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 481.0
margin_right = 720.0
margin_bottom = 200.0
size_flags_horizontal = 3
text = "x2"

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 204.0
margin_right = 720.0
margin_bottom = 251.0
theme = SubResource( 2 )
text = "Times Taken:"

[node name="TimeContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 255.0
margin_right = 720.0
margin_bottom = 1480.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button2" to="." method="_on_Button2_pressed"]
